@@ -21,6 +21,7 @@ Unreleased Version 2.3.0-pre
  * Fix: Don't show duplicate full screen action in view menu on macOS.
  * Fix: Make window maximized when leaving full screen on macOS, rather than crumpling it down to a small size and messing up the docks arrangement.
  * Feature: Allow closing modal dialogs on macOS using Command+Q. Thanks Axocrat for suggesting.
+ * Feature: Increase/decrease key frame exposure actions for all visible tracks, bound to Ctrl+Shift+Alt+Plus/Minus by default. This lets you shift frames on multiple frames at once, rather than having to move each track individually.
 
 2025-08-14 Version 2.3.0-beta.3
  * Fix: Allow putting labels on a blank brush thumbnail. Thanks hipofiz for reporting.
